Parsons has no life

--- a/ASCT_Razor_Page/ASCT_Razor_Page.csproj
+++ b/ASCT_Razor_Page/ASCT_Razor_Page.csproj
@@ -6,4 +6,10 @@
 
 
 
+  <ItemGroup>
+    <None Remove="Pages\EmptyHtmlFile.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Remove="Pages\Index.cshtml" />
+  </ItemGroup>
 </Project>
