--- a/ASCT_Razor_Page/ASCT_Razor_Page.csproj
+++ b/ASCT_Razor_Page/ASCT_Razor_Page.csproj
@@ -12,4 +12,7 @@
   <ItemGroup>
     <Content Remove="Pages\Index.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
 </Project>
