--- a/ASCT_Razor_Page/appsettings.json
+++ b/ASCT_Razor_Page/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AircraftsDbContext": "Data Source=AircraftsDbContext-8afd41c8-9807-4a33-81f3-44e75226f46f.db"
+  }
 }
